Adds support for resend a given messageId
